--- a/_scss/_ucla-vars.scss
+++ b/_scss/_ucla-vars.scss
@@ -45,11 +45,9 @@ $black: #000;
 $primary-color: $uclasafeblue;
 $primary-color-alternate-state: $ucladarkblue;
 $secondary-color: $uclagold;
-$alert-color: $ucladarkblue;
-$alert-bg-color: $uclayellowneon;
 $error-color: $uclapinkneon;
-$error-bg-color: darken($uclapinkneon, 42%);
-$error-bg-color-alt: darken($uclapinkneon, 46%);
+$error-color-dark: darken($uclapinkneon, 42%);
+$error-color-dark-alt: darken($uclapinkneon, 46%);
 $bullet-color: $uclagreenneon;
 $footer-link-color: $white;
 $footer-link-color-hover: $uclayellowneon;
