--- a/css/ucla-logon.css
+++ b/css/ucla-logon.css
@@ -162,7 +162,7 @@ optgroup {
   font-weight: bold;
 }
 
-/* line 74, ../_scss/_ucla-vars.scss */
+/* line 72, ../_scss/_ucla-vars.scss */
 body {
   font-size: 100%;
 }
@@ -181,7 +181,7 @@ body {
   font-weight: 400;
   font-style: normal;
 }
-/* line 74, ../_scss/_ucla-vars.scss */
+/* line 72, ../_scss/_ucla-vars.scss */
 body {
   font-size: 100%;
 }
@@ -479,7 +479,7 @@ li {
 
 /* line 99, ../_scss/_sso-styles.scss */
 section[role="main"] {
-  margin: 1em auto 6em;
+  margin: 2em auto 6em;
 }
 @media (min-width: 28.01em) {
   /* line 99, ../_scss/_sso-styles.scss */
@@ -694,24 +694,24 @@ article legend {
   display: none;
 }
 
-/* line 257, ../_scss/_sso-styles.scss */
-.badge-alert {
+/* line 255, ../_scss/_sso-styles.scss */
+.badge {
   position: absolute;
   bottom: -4em;
   right: 2em;
   width: 6.25em;
   height: 5em;
-  background: #ffff00;
+  background: #ff00a5;
 }
 @media (min-width: 28.01em) {
-  /* line 257, ../_scss/_sso-styles.scss */
-  .badge-alert {
-    top: -1em;
-    right: -4em;
+  /* line 255, ../_scss/_sso-styles.scss */
+  .badge {
+    top: -2em;
+    right: -2em;
   }
 }
 /* line 12, ../_scss/_mixins.scss */
-.badge-alert:before {
+.badge:before {
   content: "";
   position: absolute;
   top: 0;
@@ -719,99 +719,52 @@ article legend {
   width: 0;
   height: 0;
   border-top: 2.5em solid transparent;
-  border-right: 1.25em solid #ffff00;
+  border-right: 1.25em solid #ff00a5;
   border-bottom: 2.5em solid transparent;
 }
 /* line 23, ../_scss/_mixins.scss */
-.badge-alert:after {
+.badge:after {
   content: "";
   position: absolute;
   right: -1.25em;
   width: 0;
   height: 0;
   border-top: 2.5em solid transparent;
-  border-left: 1.25em solid #ffff00;
+  border-left: 1.25em solid #ff00a5;
   border-bottom: 2.5em solid transparent;
 }
 /* line 33, ../_scss/_mixins.scss */
-.badge-alert i {
+.badge i {
   font-size: 4.25em;
-  color: #0055a6;
+  color: #29001a;
   line-height: 1.25em;
-  padding-left: 0.27778em;
+  padding-left: 0.2381em;
 }
 
-/* line 261, ../_scss/_sso-styles.scss */
-.badge-error {
-  position: absolute;
-  bottom: -4em;
-  right: 2em;
-  width: 6.25em;
-  height: 5em;
-  background: #29001a;
-}
-@media (min-width: 28.01em) {
-  /* line 261, ../_scss/_sso-styles.scss */
-  .badge-error {
-    top: -1em;
-    right: -4em;
-  }
-}
-/* line 12, ../_scss/_mixins.scss */
-.badge-error:before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: -1.25em;
-  width: 0;
-  height: 0;
-  border-top: 2.5em solid transparent;
-  border-right: 1.25em solid #29001a;
-  border-bottom: 2.5em solid transparent;
-}
-/* line 23, ../_scss/_mixins.scss */
-.badge-error:after {
-  content: "";
-  position: absolute;
-  right: -1.25em;
-  width: 0;
-  height: 0;
-  border-top: 2.5em solid transparent;
-  border-left: 1.25em solid #29001a;
-  border-bottom: 2.5em solid transparent;
-}
-/* line 33, ../_scss/_mixins.scss */
-.badge-error i {
-  font-size: 4.25em;
-  color: #ff00a5;
-  line-height: 1.25em;
-  padding-left: 0.27778em;
-}
-
-/* line 265, ../_scss/_sso-styles.scss */
+/* line 259, ../_scss/_sso-styles.scss */
 #report {
   overflow: hidden;
 }
-/* line 267, ../_scss/_sso-styles.scss */
+/* line 261, ../_scss/_sso-styles.scss */
 #report label {
   display: block;
   margin-bottom: 0.25em;
 }
-/* line 271, ../_scss/_sso-styles.scss */
+/* line 265, ../_scss/_sso-styles.scss */
 #report ol {
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
 
-/* line 278, ../_scss/_sso-styles.scss */
+/* line 272, ../_scss/_sso-styles.scss */
 .loading i {
   margin: 1em auto 0;
   font-size: 4em;
   margin: 1em 45%;
 }
 
-/* line 284, ../_scss/_sso-styles.scss */
+/* line 278, ../_scss/_sso-styles.scss */
 .tertiary-links {
   background: rgba(0, 0, 0, 0.75);
   border-top: 1px solid #0055a6;
@@ -819,21 +772,21 @@ article legend {
   color: #cccccc;
 }
 
-/* line 292, ../_scss/_sso-styles.scss */
+/* line 286, ../_scss/_sso-styles.scss */
 .tertiary-links-wrapper p {
   margin: 0 auto;
   font-size: 0.75em;
 }
-/* line 296, ../_scss/_sso-styles.scss */
+/* line 290, ../_scss/_sso-styles.scss */
 .tertiary-links-wrapper a {
   text-decoration: none;
   color: #fff;
 }
-/* line 299, ../_scss/_sso-styles.scss */
+/* line 293, ../_scss/_sso-styles.scss */
 .tertiary-links-wrapper a:visited {
   color: #fff;
 }
-/* line 302, ../_scss/_sso-styles.scss */
+/* line 296, ../_scss/_sso-styles.scss */
 .tertiary-links-wrapper a:hover, .tertiary-links-wrapper a:focus {
   color: #ffff00;
   text-decoration: underline;
