in page error messages

--- a/_scss/_mixins.scss
+++ b/_scss/_mixins.scss
@@ -7,7 +7,7 @@
 	background: $background;
 	@include breakpoint($past-mobile) {
 		top: -$double-spacing;
-		right: -$double-spacing;
+		right: -$triple-spacing;
 	}
 	&:before {
 		content: "";
