--- a/_includes/ucla-sso-form-fail.html
+++ b/_includes/ucla-sso-form-fail.html
@@ -5,7 +5,7 @@
 	<fieldset class="login-form">
 		<legend>Sign In with your UCLA Logon ID</legend>
 		
-		<p class="login-fail">Your ID and/or password were incorrect.</p>
+		<p class="error-box">Your ID and/or password were incorrect.</p>
 		
 		<label for="logon">Account ID</label>
 		<input id="logon" name="logon" type="text" placeholder="Your UCLA Logon ID" aria-required="true" pattern=".{3,15}" required autofocus>
