--- a/css/ucla-logon.css
+++ b/css/ucla-logon.css
@@ -209,7 +209,7 @@ input {
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
-@media (min-width: 28.01em) {
+@media (min-width: 32.01em) {
   /* line 5, ../_scss/_forms.scss */
   input {
     width: 21em;
@@ -277,7 +277,7 @@ legend {
   color: #347bad;
   font-size: 1.5em;
 }
-@media (min-width: 0) and (max-width: 28em) {
+@media (min-width: 0) and (max-width: 32em) {
   /* line 58, ../_scss/_forms.scss */
   legend {
     text-align: center;
@@ -321,7 +321,7 @@ button, .button {
   text-decoration: none;
   border-radius: 3px;
 }
-@media (min-width: 0) and (max-width: 28em) {
+@media (min-width: 0) and (max-width: 32em) {
   /* line 72, ../_scss/_forms.scss */
   button, .button {
     width: 100%;
@@ -392,7 +392,7 @@ h1 {
   line-height: 1.2375em;
   margin: 0;
 }
-@media (min-width: 0) and (max-width: 28em) {
+@media (min-width: 0) and (max-width: 32em) {
   /* line 29, ../_scss/_sso-styles.scss */
   h1 {
     font-size: 1.5em;
@@ -403,7 +403,7 @@ h1 {
 h2 {
   font-size: 1.5em;
 }
-@media (min-width: 0) and (max-width: 28em) {
+@media (min-width: 0) and (max-width: 32em) {
   /* line 38, ../_scss/_sso-styles.scss */
   h2 {
     font-size: 1.25em;
@@ -481,7 +481,7 @@ li {
 section[role="main"] {
   margin: 2em auto 6em;
 }
-@media (min-width: 28.01em) {
+@media (min-width: 32.01em) {
   /* line 99, ../_scss/_sso-styles.scss */
   section[role="main"] {
     margin: 6em auto 3em;
@@ -507,13 +507,13 @@ article, #sso, .secondary-button, .sp-support, .tertiary-links-wrapper {
   width: 100%;
   height: 4em;
 }
-@media (min-width: 28.01em) {
+@media (min-width: 32.01em) {
   /* line 114, ../_scss/_sso-styles.scss */
   .tertiary-links {
     height: 2em;
   }
 }
-@media (min-width: 0) and (max-width: 28em) {
+@media (min-width: 0) and (max-width: 32em) {
   /* line 122, ../_scss/_sso-styles.scss */
   .tertiary-links a, .tertiary-links span {
     width: 100%;
@@ -532,7 +532,7 @@ article, #sso, .secondary-button, .sp-support, .tertiary-links-wrapper {
   margin: 0 auto;
   width: 90%;
 }
-@media (min-width: 28.01em) {
+@media (min-width: 32.01em) {
   /* line 138, ../_scss/_sso-styles.scss */
   .logo {
     width: 70%;
@@ -554,7 +554,7 @@ article, #sso, .secondary-button, .sp-support, .tertiary-links-wrapper {
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
-@media (min-width: 28.01em) {
+@media (min-width: 32.01em) {
   /* line 151, ../_scss/_sso-styles.scss */
   #sso {
     padding: 0 4em 1em;
@@ -580,7 +580,7 @@ article, #sso, .secondary-button, .sp-support, .tertiary-links-wrapper {
   width: 100%;
   padding-top: 0;
 }
-@media (min-width: 28.01em) {
+@media (min-width: 32.01em) {
   /* line 173, ../_scss/_sso-styles.scss */
   .sso-submit {
     width: 23.25581%;
@@ -599,7 +599,7 @@ article, #sso, .secondary-button, .sp-support, .tertiary-links-wrapper {
   font-size: 0.75em;
   margin: 0;
 }
-@media (min-width: 28.01em) {
+@media (min-width: 32.01em) {
   /* line 181, ../_scss/_sso-styles.scss */
   .sso-links {
     width: 74.4186%;
@@ -611,19 +611,29 @@ article, #sso, .secondary-button, .sp-support, .tertiary-links-wrapper {
 }
 
 /* line 191, ../_scss/_sso-styles.scss */
-.login-fail {
+.error-box {
   background: repeating-linear-gradient(45deg, #29001a, #29001a 0.5em, #14000d 0.5em, #14000d 1em);
   color: #ff00a5;
   padding: 0.5em;
   -moz-border-radius: 3px;
   -webkit-border-radius: 3px;
   border-radius: 3px;
-  width: 26.3em;
   text-align: center;
   margin-top: 0;
 }
 
-/* line 201, ../_scss/_sso-styles.scss */
+/* line 200, ../_scss/_sso-styles.scss */
+#sso .error-box {
+  width: 100%;
+}
+@media (min-width: 32.01em) {
+  /* line 200, ../_scss/_sso-styles.scss */
+  #sso .error-box {
+    width: 26.3em;
+  }
+}
+
+/* line 207, ../_scss/_sso-styles.scss */
 .sp-support {
   background: rgba(204, 204, 204, 0.35);
   padding: 1em;
@@ -632,54 +642,54 @@ article, #sso, .secondary-button, .sp-support, .tertiary-links-wrapper {
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 206, ../_scss/_sso-styles.scss */
+/* line 212, ../_scss/_sso-styles.scss */
 .sp-support p, .sp-support li {
   font-size: 0.75em;
 }
-/* line 209, ../_scss/_sso-styles.scss */
+/* line 215, ../_scss/_sso-styles.scss */
 .sp-support h2 {
   font-size: 1.125em;
   margin-top: 0;
 }
-/* line 213, ../_scss/_sso-styles.scss */
+/* line 219, ../_scss/_sso-styles.scss */
 .sp-support h3 {
   font-size: 1em;
   margin-top: 0;
 }
 
-/* line 219, ../_scss/_sso-styles.scss */
+/* line 225, ../_scss/_sso-styles.scss */
 .primary-button {
   background-color: #347bad;
   color: #fff;
   font-size: 1.125em;
 }
-/* line 223, ../_scss/_sso-styles.scss */
+/* line 229, ../_scss/_sso-styles.scss */
 .primary-button:hover {
   background-color: #ffe800;
   color: #0055a6;
 }
 
-/* line 229, ../_scss/_sso-styles.scss */
+/* line 235, ../_scss/_sso-styles.scss */
 .secondary-button {
   background-color: #526991;
   color: #fff;
   margin: 1em auto 0;
   display: block;
 }
-@media (min-width: 0) and (max-width: 28em) {
-  /* line 229, ../_scss/_sso-styles.scss */
+@media (min-width: 0) and (max-width: 32em) {
+  /* line 235, ../_scss/_sso-styles.scss */
   .secondary-button {
     font-size: 0.75em;
     padding: 1em;
   }
 }
-/* line 238, ../_scss/_sso-styles.scss */
+/* line 244, ../_scss/_sso-styles.scss */
 .secondary-button:hover {
   background-color: #405170;
   color: #fff;
 }
 
-/* line 244, ../_scss/_sso-styles.scss */
+/* line 250, ../_scss/_sso-styles.scss */
 article {
   position: relative;
   background: #fff;
@@ -690,12 +700,12 @@ article {
   -webkit-border-radius: 3px;
   border-radius: 3px;
 }
-/* line 251, ../_scss/_sso-styles.scss */
+/* line 257, ../_scss/_sso-styles.scss */
 article legend {
   display: none;
 }
 
-/* line 256, ../_scss/_sso-styles.scss */
+/* line 262, ../_scss/_sso-styles.scss */
 .badge {
   position: absolute;
   bottom: -4em;
@@ -704,11 +714,11 @@ article legend {
   height: 5em;
   background: #ff00a5;
 }
-@media (min-width: 28.01em) {
-  /* line 256, ../_scss/_sso-styles.scss */
+@media (min-width: 32.01em) {
+  /* line 262, ../_scss/_sso-styles.scss */
   .badge {
     top: -2em;
-    right: -2em;
+    right: -3em;
   }
 }
 /* line 12, ../_scss/_mixins.scss */
@@ -742,36 +752,36 @@ article legend {
   padding-left: 0.2381em;
 }
 
-/* line 260, ../_scss/_sso-styles.scss */
+/* line 266, ../_scss/_sso-styles.scss */
 #report {
   overflow: hidden;
 }
-/* line 262, ../_scss/_sso-styles.scss */
+/* line 268, ../_scss/_sso-styles.scss */
 #report label {
   display: block;
   margin-bottom: 0.25em;
 }
-/* line 266, ../_scss/_sso-styles.scss */
+/* line 272, ../_scss/_sso-styles.scss */
 #report ol {
   list-style: none;
   margin: 0;
   padding-left: 0;
 }
 
-/* line 273, ../_scss/_sso-styles.scss */
+/* line 279, ../_scss/_sso-styles.scss */
 .loading i {
   margin: 1em auto 0;
   font-size: 4em;
   margin: 1em 45%;
 }
-@media (min-width: 0) and (max-width: 28em) {
-  /* line 273, ../_scss/_sso-styles.scss */
+@media (min-width: 0) and (max-width: 32em) {
+  /* line 279, ../_scss/_sso-styles.scss */
   .loading i {
     margin: 0.5em 40%;
   }
 }
 
-/* line 282, ../_scss/_sso-styles.scss */
+/* line 288, ../_scss/_sso-styles.scss */
 .tertiary-links {
   background: rgba(0, 0, 0, 0.75);
   border-top: 1px solid #0055a6;
@@ -779,21 +789,21 @@ article legend {
   color: #cccccc;
 }
 
-/* line 290, ../_scss/_sso-styles.scss */
+/* line 296, ../_scss/_sso-styles.scss */
 .tertiary-links-wrapper p {
   margin: 0 auto;
   font-size: 0.75em;
 }
-/* line 294, ../_scss/_sso-styles.scss */
+/* line 300, ../_scss/_sso-styles.scss */
 .tertiary-links-wrapper a {
   text-decoration: none;
   color: #fff;
 }
-/* line 297, ../_scss/_sso-styles.scss */
+/* line 303, ../_scss/_sso-styles.scss */
 .tertiary-links-wrapper a:visited {
   color: #fff;
 }
-/* line 300, ../_scss/_sso-styles.scss */
+/* line 306, ../_scss/_sso-styles.scss */
 .tertiary-links-wrapper a:hover, .tertiary-links-wrapper a:focus {
   color: #ffff00;
   text-decoration: underline;
