--- a/_scss/_sso-styles.scss
+++ b/_scss/_sso-styles.scss
@@ -138,7 +138,7 @@ article, #sso, .secondary-button, .sp-support, .tertiary-links-wrapper {
 .logo {
 	display: block;
 	margin: 0 auto;
-	width: 90%;
+	width: 80%;
 	@include breakpoint($past-mobile) {
 		width: 70%;
 	}
@@ -175,12 +175,18 @@ article, #sso, .secondary-button, .sp-support, .tertiary-links-wrapper {
 
 .sso-links {
 	width: 100%;
+	li {
+		@include breakpoint($mobile-only) {
+			margin: $default-spacing 0;
+		}
+	}
 	@include breakpoint($past-mobile) {
 		@include grid-span(3, 2);
 	}
 	@include clearfix;
 	font-size: $meta-font-size;
 	margin: 0;
+
 }
 
 .error-box {
