--- a/_includes/fatal-report-form.html
+++ b/_includes/fatal-report-form.html
@@ -10,7 +10,7 @@
 		<input id="contact" name="contact" type="text" value="oij2305u0392iroe" aria-required="true" disabled required>
 		
 		<label for="desc">Anything else you want to share?</label>
-		<textarea id="desc" name="desc" rows="5" cols="63" placeholder="I was using Firefox 35 on OS X 10.10 and trying to log in to..."></textarea>
+		<textarea id="desc" name="desc" rows="5" placeholder="I was using Firefox 35 on OS X 10.10 and trying to log in to..."></textarea>
 
 	</fieldset>
 
