--- a/_includes/ucla-footer.html
+++ b/_includes/ucla-footer.html
@@ -1,6 +1,6 @@
 <footer role="contentinfo" class="tertiary-links">
 	<div class="tertiary-links-wrapper">
-		<p><a href="{{ site.baseurl }}/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span> <a href="/." class="right">NH</a></p>
+		<p><a href="{{ site.baseurl }}/cms-policies.html">Privacy, Security & Legal</a> <span>Loaded: {{ site.time }}</span> <a href="{{ site.baseurl }}" class="right">NH</a></p>
 	</div>
 </footer>
 
