--- a/_scss/_med-vars.scss
+++ b/_scss/_med-vars.scss
@@ -10,10 +10,10 @@
 /////////////////////////////////////////
 
 // breakpoints
-$mobile-only: 0 32em;
-$past-mobile: 32.01em;
-$liquid: 32.01em 38em;
-$elastic: 38.01em;
+$one-col-only: 0 32em;
+$past-one-col: 32.01em;
+$grid-liquid: 32.01em 38em;
+$grid-elastic: 38.01em;
 
 // singularity.gs layout
 @include add-grid(4);
@@ -73,7 +73,7 @@ $secondary-login-option-color: #526991;
 ///       TYPOGRAPHY / RHYTHM
 /////////////////////////////////////////
 
-$html-background: #d1e8f8 url('../images/skyline.jpg') no-repeat;
+$html-background: $uclaoldblue;
 
 $body-text-color: #666;
 $body-background-color: $white;
