--- a/_scss/_ucla-vars.scss
+++ b/_scss/_ucla-vars.scss
@@ -3,10 +3,10 @@
 /////////////////////////////////////////
 
 // breakpoints
-$mobile-only: 0 32em;
-$past-mobile: 32.01em;
-$liquid: 32.01em 38em;
-$elastic: 38.01em;
+$one-col-only: 0 34em;
+$past-one-col: 34.01em;
+$grid-liquid: 34.01em 38em;
+$grid-elastic: 38.01em;
 
 // singularity.gs layout
 @include add-grid(4);
