--- a/_scss/_med-vars.scss
+++ b/_scss/_med-vars.scss
@@ -10,9 +10,7 @@
 /////////////////////////////////////////
 
 // breakpoints
-$one-col-only: 0 32em;
-$past-one-col: 32.01em;
-$grid-liquid: 32.01em 38em;
+$grid-liquid: 34;
 $grid-elastic: 38.01em;
 
 // singularity.gs layout
