--- a/_scss/_mixins.scss
+++ b/_scss/_mixins.scss
@@ -5,7 +5,7 @@
 	width: $base-size * 2.5;
 	height: $base-size * 2;
 	background: $background;
-	@include breakpoint($past-one-col) {
+	@include breakpoint($grid-liquid) {
 		top: -$double-spacing;
 		right: -$triple-spacing;
 	}
