includes for medcenter, initial vars + some tweaks

--- a/_layouts/medcenter.html
+++ b/_layouts/medcenter.html
@@ -1,10 +1,10 @@
-{% include ucla-head.html %}
+{% include health-head.html %}
 
 	<section class="content" role="main">
 			{{ content }}
 	</section>
 
-	{% include ucla-footer.html %}
+	{% include health-footer.html %}
 
 </body>
 </html>
