--- a/_scss/_ucla-vars.scss
+++ b/_scss/_ucla-vars.scss
@@ -43,13 +43,22 @@ $black: #000;
 $primary-color: $uclasafeblue;
 $primary-color-alternate-state: $ucladarkblue;
 $secondary-color: $uclagold;
+
 $error-color: $uclapinkneon;
 $error-color-dark: darken($uclapinkneon, 42%);
 $error-color-dark-alt: darken($uclapinkneon, 46%);
+
+$secondary-login-option-color: #526991;
+
+$anchor-color: $uclapurpleneon;
+$anchor-color-hover: #1e4b87;
 $bullet-color: $uclagreenneon;
+
 $footer-link-color: $white;
 $footer-link-color-hover: $uclayellowneon;
-$secondary-login-option-color: #526991;
+
+$form-valid-color: $uclalightblue;
+$form-invalid-color: $uclapinkneon;
 
 /////////////////////////////////////////
 ///       TYPOGRAPHY / RHYTHM
@@ -62,9 +71,6 @@ $body-background-color: $white;
 
 $font-stack: ProximaNova, Verdana, sans-serif;
 $global-letter-spacing: 0.5px;
-
-$anchor-font-color: $uclapurpleneon;
-$anchor-font-color-hover: #1e4b87;
 
 // prepare for media queries to shift base font and have that inherited down em chain
 body {
