--- a/_scss/_med-vars.scss
+++ b/_scss/_med-vars.scss
@@ -57,11 +57,11 @@ $error-color: $rose;
 $error-color-dark: shade($rose, 20%);
 $error-color-dark-alt: shade($rose, 24%);
 
-$secondary-login-option-color: #526991;
+$secondary-login-option-color: #347bad;
 
 $anchor-color: #0081dc; // taken from identity.uclahealth.org
 $anchor-color-hover: #0081dc;
-$bullet-color: $warmgrey3;
+$bullet-color: $black;
 
 $footer-link-color: $white;
 $footer-link-color-hover: $gold;
@@ -75,7 +75,7 @@ $form-invalid-color: $rose;
 
 $html-background: $uclaoldblue;
 
-$body-text-color: #666;
+$body-text-color: #444;
 $body-background-color: $white;
 
 $font-stack: ProximaNova, Verdana, sans-serif;
