add sp-support var, space health logo

--- a/_scss/_med-vars.scss
+++ b/_scss/_med-vars.scss
@@ -58,10 +58,11 @@ $error-color-dark: shade($rose, 20%);
 $error-color-dark-alt: shade($rose, 24%);
 
 $secondary-login-option-color: #347bad;
+$sp-support-bg: $neutral;
 
 $anchor-color: #0081dc; // taken from identity.uclahealth.org
 $anchor-color-hover: #0081dc;
-$bullet-color: $black;
+$bullet-color: #444;
 
 $footer-link-color: $white;
 $footer-link-color-hover: $gold;
