--- a/_scss/_sso-styles.scss
+++ b/_scss/_sso-styles.scss
@@ -209,7 +209,7 @@ article, #sso, .secondary-button, .sp-support, .tertiary-links-wrapper {
 }
 
 .sp-support {
-	background: rgba($neutral, .45);
+	background: $sp-support-bg;
 	padding: $default-spacing;
 	margin: $default-spacing auto 0;
 	border-radius: $global-border-radius;
