--- a/_scss/_ucla-vars.scss
+++ b/_scss/_ucla-vars.scss
@@ -49,6 +49,7 @@ $error-color-dark: darken($uclapinkneon, 42%);
 $error-color-dark-alt: darken($uclapinkneon, 46%);
 
 $secondary-login-option-color: #526991;
+$sp-support-bg: rgba($neutral, .45);
 
 $anchor-color: $uclapurpleneon;
 $anchor-color-hover: #1e4b87;
