rm badges from medcenter

--- a/_scss/_med-vars.scss
+++ b/_scss/_med-vars.scss
@@ -53,7 +53,7 @@ $primary-color: $uclaoldblue;
 $primary-color-alternate-state: $uclaoldbluedark;
 $secondary-color: $gold;
 
-$error-color: $rose;
+$error-color: $white;
 $error-color-dark: shade($rose, 20%);
 $error-color-dark-alt: shade($rose, 24%);
 
