--- a/_scss/_med-vars.scss
+++ b/_scss/_med-vars.scss
@@ -79,7 +79,7 @@ $html-background: $uclaoldblue;
 $body-text-color: #444;
 $body-background-color: $white;
 
-$font-stack: ProximaNova, Verdana, sans-serif;
+$font-stack: "Adobe Minion Regular", Bodoni, "Adobe Caslon", Century, Palatino;
 $global-letter-spacing: 0.5px;
 
 // prepare for media queries to shift base font and have that inherited down em chain
