support multiple font stacks

--- a/_scss/_ucla-vars.scss
+++ b/_scss/_ucla-vars.scss
@@ -71,6 +71,7 @@ $body-text-color: #666;
 $body-background-color: $white;
 
 $font-stack: ProximaNova, Verdana, sans-serif;
+$font-stack-alt: ProximaNova, Verdana, sans-serif;
 $global-letter-spacing: 0.5px;
 
 // prepare for media queries to shift base font and have that inherited down em chain
