--- a/_scss/_med-vars.scss
+++ b/_scss/_med-vars.scss
@@ -79,7 +79,8 @@ $html-background: $uclaoldblue;
 $body-text-color: #444;
 $body-background-color: $white;
 
-$font-stack: "Adobe Minion Regular", Bodoni, "Adobe Caslon", Century, Palatino;
+$font-stack: "Adobe Univers", Futura, "Trade Gothic", Univers;
+$font-stack-alt: "Adobe Minion Regular", Bodoni, "Adobe Caslon", Century, Palatino;
 $global-letter-spacing: 0.5px;
 
 // prepare for media queries to shift base font and have that inherited down em chain
@@ -88,7 +89,7 @@ body {
 }
 
 $h1-font-size: 2em; 
-$h2-font-size: 1.5em;
+$h2-font-size: 1.75em;
 $h3-font-size: 1.25em;
 $h4-font-size: 1.125em;
 
