--- a/_scss/_sso-styles.scss
+++ b/_scss/_sso-styles.scss
@@ -23,7 +23,8 @@ body {
 
 h1, h2, h3, h4 {
 	font-weight: normal;
-	color: $primary-color;	
+	color: $primary-color;
+	font-family: $font-stack-alt;
 }
 
 h1 {
