--- a/_scss/_med-vars.scss
+++ b/_scss/_med-vars.scss
@@ -80,7 +80,7 @@ $body-text-color: #444;
 $body-background-color: $white;
 
 $font-stack: "Adobe Univers", Futura, "Trade Gothic", Univers;
-$font-stack-alt: "Adobe Minion Regular", Bodoni, "Adobe Caslon", Century, Palatino;
+$font-stack-alt: "Adobe Minion Regular", MinionPro, Bodoni, "Adobe Caslon", Century, Palatino;
 $global-letter-spacing: 0.5px;
 
 // prepare for media queries to shift base font and have that inherited down em chain
