--- a/_scss/medcenter.scss
+++ b/_scss/medcenter.scss
@@ -11,8 +11,13 @@
 @import 'normalize/links';
 @import 'normalize/forms';
 
-// custom styles
-@import 'med-vars';
-@import 'mixins';
-@import 'forms';
-@import 'sso-styles';
+// Medcenter Login Specfic
+@import 'config/med-vars';
+
+// General SSO Styles 
+@import 'mixins/badge';
+@import 'partials/global-elements';
+@import 'partials/form-elements';
+@import 'partials/layout';
+@import 'partials/login-form';
+@import 'partials/supporting-content';
