font tweaks, some refactoring

--- a/_scss/mixins/_badge.scss
+++ b/_scss/mixins/_badge.scss
@@ -7,7 +7,7 @@
 	background: $background;
 	@include breakpoint($grid-liquid) {
 		top: -$double-spacing;
-		right: -$triple-spacing;
+		right: -$quad-spacing;
 	}
 	&:before {
 		content: "";
