--- a/_scss/config/_ucla-vars.scss
+++ b/_scss/config/_ucla-vars.scss
@@ -45,11 +45,11 @@ $primary-color-alternate-state: $ucladarkblue;
 $secondary-color: $uclagold;
 
 $error-color: $uclapinkneon;
-$error-color-dark: darken($uclapinkneon, 42%);
+$error-color-dark: darken($uclapinkneon, 41%);
 $error-color-dark-alt: darken($uclapinkneon, 46%);
 
 $secondary-login-option-color: #526991;
-$sp-support-bg: rgba($neutral, .45);
+$sp-support-bg: rgba(lighten($neutral, 5%), .7);
 
 $anchor-color: $uclapurpleneon;
 $anchor-color-hover: #1e4b87;
@@ -70,8 +70,8 @@ $html-background: #d1e8f8 url('../images/skyline.jpg') no-repeat;
 $body-text-color: #666;
 $body-background-color: $white;
 
-$font-stack: ProximaNova, Verdana, sans-serif;
-$font-stack-alt: ProximaNova, Verdana, sans-serif;
+$font-stack: 'Proxima Nova', Verdana, sans-serif;
+$font-stack-alt: 'Proxima Nova', Verdana, sans-serif;
 $global-letter-spacing: 0.5px;
 
 // prepare for media queries to shift base font and have that inherited down em chain
@@ -80,12 +80,12 @@ body {
 }
 
 $h1-font-size: 2em; 
-$h2-font-size: 1.5em;
+$h2-font-size: 1.75em;
 $h3-font-size: 1.25em;
 $h4-font-size: 1.125em;
 
 $p-font-size: 1em;
-$meta-font-size: .75em;
+$meta-font-size: .8em;
 
 $base-line-height: 1.375em;
 
