--- a/_scss/partials/_global-elements.scss
+++ b/_scss/partials/_global-elements.scss
@@ -74,13 +74,14 @@ a {
 
 section[role="main"] ul {
 	list-style: none;
-	padding-left: .25em;
+	padding-left: .1em;
 	margin-bottom: 0;
 	li:before {
 		color: $bullet-color;
 		content: "•";
 		position: relative;
-		font-size: 1.5em;
-		left: -.25em;
+		font-size: 1.75em;
+		left: -.15em;
+		top: .1em;
 	}
 }
