--- a/_scss/partials/_login-form.scss
+++ b/_scss/partials/_login-form.scss
@@ -41,7 +41,7 @@
 	li {
 		margin: $default-spacing 0;
 		@include breakpoint($grid-liquid) {
-			margin: 0;
+			margin: -.4em 0 0;
 		}
 	}
 	@include breakpoint($grid-liquid) {
