simplify legend, tweak content margins

--- a/_scss/partials/_layout.scss
+++ b/_scss/partials/_layout.scss
@@ -1,7 +1,7 @@
 section[role="main"] {
-	margin: $double-spacing auto $page-spacing * 1.5;
+	margin: $double-spacing auto $quad-spacing * 2;
 	@include breakpoint($grid-liquid) {
-		margin: $page-spacing auto $page-spacing;
+		margin: 13% auto;
 	}
 }
 
