--- a/_scss/partials/_supporting-content.scss
+++ b/_scss/partials/_supporting-content.scss
@@ -8,11 +8,7 @@
 	}
 	h2 {
 		font-size: $h4-font-size;
-		margin-top: 0;
-	}
-	h3 {
-		font-size: $p-font-size;
-		margin-top: 0;
+		margin: 0;
 	}
 }
 
